--- a/templates/superwerker.template.yaml
+++ b/templates/superwerker.template.yaml
@@ -288,6 +288,11 @@ Resources:
           - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/backup/feature.yaml'
           - S3Region: !If [UsingDefaultBucket, !Sub '${AWS::Region}', !Ref QSS3BucketRegion]
             S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+      Parameters:
+        TemplateURL: !Sub
+          - https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/backup/implementation.yaml
+          - S3Region: !If [ UsingDefaultBucket, !Sub '${AWS::Region}', !Ref QSS3BucketRegion ]
+            S3Bucket: !If [ UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName ]
 
   ServiceControlPolicies:
     Condition: IncludeServiceControlPolicies
