--- a/templates/backup/implementation.yaml
+++ b/templates/backup/implementation.yaml
@@ -3,9 +3,14 @@ Transform: AWS::Serverless-2016-10-31
 Description: Sets up backups. (qs-1s3rsr7la)
 
 Parameters:
-  FeatureName:
+  EnableCloudFormationOrganizationsAccess:
     Type: String
-    Default: backup
+    AllowedValues:
+      - true
+      - false
+
+Conditions:
+  EnableCloudFormationOrganizationsAccess: !Equals [ !Ref EnableCloudFormationOrganizationsAccess, true]
 
 Resources:
 
@@ -432,6 +437,7 @@ Resources:
             cfnresponse.send(event, context, cfnresponse.SUCCESS, data, id)
 
   EnableCloudFormationStacksetsOrgAccess:
+    Condition: EnableCloudFormationOrganizationsAccess
     Type: AWS::Synthetics::Canary
     DependsOn: CfnStackSetsReadyEnablePermission # make sure the Lambda which handles the wait condition is entirely ready before enabling Cloudformation Org access. This includes Lambda event+permission have to be ready.
     Metadata:
@@ -513,6 +519,7 @@ Resources:
           };
 
   EnableCloudFormationStacksetsOrgAccessRole:
+    Condition: EnableCloudFormationOrganizationsAccess
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
@@ -526,6 +533,7 @@ Resources:
         - arn:aws:iam::aws:policy/AdministratorAccess
 
   EnableCloudFormationStacksetsOrgAccessArtifacts:
+    Condition: EnableCloudFormationOrganizationsAccess
     Type: AWS::S3::Bucket
     Properties:
       LifecycleConfiguration:
@@ -534,15 +542,18 @@ Resources:
             Status: Enabled
 
   EnableCloudFormationStacksetsOrgAccessReadyHandle:
+    Condition: EnableCloudFormationOrganizationsAccess
     Type: AWS::CloudFormation::WaitConditionHandle
 
   EnableCloudFormationStacksetsOrgAccessReadyWaitCondition:
+    Condition: EnableCloudFormationOrganizationsAccess
     Type: AWS::CloudFormation::WaitCondition
     Properties:
       Handle: !Ref EnableCloudFormationStacksetsOrgAccessReadyHandle
       Timeout: '1200'
 
   CfnStackSetsReady:
+    Condition: EnableCloudFormationOrganizationsAccess
     Type: AWS::Serverless::Function
     Properties:
       Events:
