--- a/tests/buildspec.yaml
+++ b/tests/buildspec.yaml
@@ -59,9 +59,9 @@ phases:
 
     finally:
       # remove temp IAM user
-      - aws --profile test_account iam delete-access-key --user-name superwerker-tests --access-key-id "${SUPERWERKER_AWS_ACCESS_KEY_ID}"
-      - aws --profile test_account iam detach-user-policy --user-name superwerker-tests --policy-arn arn:aws:iam::aws:policy/AdministratorAccess
-      - aws --profile test_account iam delete-user --user-name superwerker-tests
+      - aws --profile test_account iam delete-access-key --user-name superwerker-tests --access-key-id "${SUPERWERKER_AWS_ACCESS_KEY_ID}" || true
+      - aws --profile test_account iam detach-user-policy --user-name superwerker-tests --policy-arn arn:aws:iam::aws:policy/AdministratorAccess || true
+      - aws --profile test_account iam delete-user --user-name superwerker-tests || true
 
       # call sub-account closing and stack cleanup
       - aws codebuild start-build --project-name ${SUPERWERKER_CLEANUP_PROJECT_NAME} --environment-variables-override name=AWS_CROSS_ACCOUNT_ROLE_ARN,value=${aws_cross_account_role_arn} name=SUPERWERKER_REGION,value=${SUPERWERKER_REGION} name=AWS_ACCOUNT_ID,value=${aws_account_id} --source-version $CODEBUILD_RESOLVED_SOURCE_VERSION
