--- a/templates/service-control-policies.yaml
+++ b/templates/service-control-policies.yaml
@@ -43,7 +43,7 @@ Resources:
           - ','
           - - !If
               - IncludeSecurityHub
-              - |
+              - !Sub |
                 {
                     "Condition": {
                         "ArnNotLike": {
@@ -66,7 +66,7 @@ Resources:
               - !Ref AWS::NoValue
             - !If
               - IncludeBackup
-              - |
+              - !Sub |
                 {
                     "Condition": {
                         "ArnNotLike": {
