Ensure happy linter (#255)
* ARNs changed to be partition agnostic to satisfy quickstart linter

Co-authored-by: Soenke Ruempler <soenke.ruempler@superluminar.io>

--- a/templates/service-control-policies.yaml
+++ b/templates/service-control-policies.yaml
@@ -43,11 +43,11 @@ Resources:
           - ','
           - - !If
               - IncludeSecurityHub
-              - |
+              - !Sub |
                 {
                     "Condition": {
                         "ArnNotLike": {
-                            "aws:PrincipalARN": "arn:aws:iam::*:role/AWSControlTowerExecution"
+                            "aws:PrincipalARN": "arn:${AWS::Partition}:iam::*:role/AWSControlTowerExecution"
                         }
                     },
                     "Action": [
@@ -66,11 +66,11 @@ Resources:
               - !Ref AWS::NoValue
             - !If
               - IncludeBackup
-              - |
+              - !Sub |
                 {
                     "Condition": {
                         "ArnNotLike": {
-                            "aws:PrincipalARN": "arn:aws:iam::*:role/stacksets-exec-*"
+                            "aws:PrincipalARN": "arn:${AWS::Partition}:iam::*:role/stacksets-exec-*"
                         }
                     },
                     "Action": [
@@ -87,8 +87,8 @@ Resources:
                         "iam:UpdateRoleDescription"
                     ],
                     "Resource": [
-                        "arn:aws:iam::*:role/service-role/AWSBackupDefaultServiceRole",
-                        "arn:aws:iam::*:role/SuperwerkerBackupTagsEnforcementRemediationRole"
+                        "arn:${AWS::Partition}:iam::*:role/service-role/AWSBackupDefaultServiceRole",
+                        "arn:${AWS::Partition}:iam::*:role/SuperwerkerBackupTagsEnforcementRemediationRole"
                     ],
                     "Effect": "Deny",
                     "Sid": "SWProtectBackup"
