--- a/tests/pipeline.yaml
+++ b/tests/pipeline.yaml
@@ -86,7 +86,7 @@ Resources:
               Service: codepipeline.amazonaws.com
             Action: sts:AssumeRole
       ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/AdministratorAccess # FIXME: least privilege
+        - !Sub arn:${AWS::Partition}:iam::aws:policy/AdministratorAccess # FIXME: least privilege
 
   SuperwerkerUpdatePipelineWebhook:
     Type: AWS::CodePipeline::Webhook
@@ -232,7 +232,7 @@ Resources:
               - codebuild.amazonaws.com
           Action: sts:AssumeRole
       ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/AdministratorAccess # FIXME: least privilege
+        - !Sub arn:${AWS::Partition}:iam::aws:policy/AdministratorAccess # FIXME: least privilege
 
   DeploymentBucketUser:
     Type: AWS::IAM::User
